--- a/index.html
+++ b/index.html
@@ -44,14 +44,19 @@
                 <img src="mona-siswanto-be4eoee4who-unsplash.jpg" alt="">
                 <img src="maude-frederique-lavoie-EDSTj4kCUcw-unsplash.jpg" alt="">
                 <img src="kai-s-photography-2s3GhhJz2uY-unsplash.jpg" alt="">
-                
+                  <div class="boutton2">
+                     <p>CHAUSSURE</p>
+                     <!-- boutton -->
+                      <p>JEANS</p>
+                      <!-- boutton -->
+                       <p>ENSEMBLE</p>
+                       <!-- boutton -->
 
+                  </div>
 
             </div>
 
-
-
-    </section>
+   </section>
 
 </body>
 </html>
