--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <a href="#">BOUTIQUE</a>
         <a href="#">à PROPOS</a>
         <a href="#">PANIER</a>
-        <a href="#">COMMANDE</a>
-        <P>Prêt à porter pour hommes et femmes</P>
+        <a href="#">COMMANDE</a> 
     </nav>
+        <hr><P>Prêt à porter pour hommes et femmes</P>
     <section class="container">
         <h1>PIYA,de tout partout,pour vous
              <br>
@@ -52,6 +52,7 @@
 
 
     </section>
+    <link rel="stylesheet" href="style.css">
 
 </body>
 </html>
