ajout des boutons

--- a/index.html
+++ b/index.html
@@ -20,23 +20,26 @@
              <br>
              PIYA MADAGASCAR,LA NOUVELLE MODE
         </h1>
-    <!-- boutton -->
+     <!-- boutton -->
+      <input type="button" value="Collections">
        <div class="1">
           <img src="priscilla-du-preez-dlxLGIy-2VU-unsplash.jpg" alt="">
        </div>
           <hr><p>Catégorie</p><hr>
         <div class="2">
            <img src="kateryna-hliznitsova-uRyOENzo_Qw-unsplash.jpg" alt="">
-           
            <img src="quinten-de-graaf-kCyJ9H37qlc-unsplash.jpg" alt="">
            <img src="alireza-dolati-OVS3rqXq9gg-unsplash.jpg" alt="">
               <div class="boutton1">
                  <p>CHEMISE</p>
                  <!-- boutton -->
-                  <p>FEMME</p>
+                 <input type="button" value="Découvrir">
+                 <p>FEMME</p>
                   <!-- boutton -->
-                   <p>CHEMISE FEMME</p>
+                 <input type="button" value="Découvrir">
+                 <p>CHEMISE FEMME</p>
                    <!-- boutton -->
+                 <input type="button" value="Découvrir">
               </div>
         </div>
             <hr><p>Produit récents</p><hr>
@@ -44,7 +47,7 @@
                 <img src="mona-siswanto-be4eoee4who-unsplash.jpg" alt="">
                 <img src="maude-frederique-lavoie-EDSTj4kCUcw-unsplash.jpg" alt="">
                 <img src="kai-s-photography-2s3GhhJz2uY-unsplash.jpg" alt="">
-                
+
 
 
             </div>
